// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.externalcloudaudit.v1;

import "google/protobuf/empty.proto";
import "teleport/externalcloudaudit/v1/externalcloudaudit.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/externalcloudaudit/v1;externalcloudauditv1";

// ExternalCloudAuditService provides methods to manage external cloud audit.
// It's used only in Teleport Cloud for feature called 'bring your own audit bucket'.
//
// Creating ExternalCloudAudit does not enable external cloud audit in cluster,
// it's working as a "draft". Test connection can be executed on draft.
// To use ExternalCloudAudit in cluster call method PromoteToClusterClusterExternalCloudAudit,
// which will clone existing ExternalCloudAudit into new resource.
// Promoted resource can't be mutated, it can be only disabled.
// To change values in cluster ExternalCloudAudit, first to change "draft",
// test connection and call PromoteToClusterClusterExternalCloudAudit again.
//
// Supporting ExternalCloudAudit as resources: "draft" and "cluster", allow us
// test connection before actually enabling it in cluster.
service ExternalCloudAuditService {
  // GetDraftExternalCloudAudit returns the draft external cloud audit configuration resource.
  rpc GetDraftExternalCloudAudit(GetDraftExternalCloudAuditRequest) returns (GetDraftExternalCloudAuditResponse);

  // UpsertDraftExternalCloudAudit upserts a draft external cloud Audit resource.
  rpc UpsertDraftExternalCloudAudit(UpsertDraftExternalCloudAuditRequest) returns (UpsertDraftExternalCloudAuditResponse);

  // DeleteDraftExternalCloudAudit removes draft external cloud Audit resource.
  rpc DeleteDraftExternalCloudAudit(DeleteDraftExternalCloudAuditRequest) returns (google.protobuf.Empty);

  // PromoteToClusterExternalCloudAudit promotes the current draft external cloud
  // audit configuration to be used in the cluster.
  // This method causes the Teleport Auth service to reload.
  rpc PromoteToClusterExternalCloudAudit(PromoteToClusterExternalCloudAuditRequest) returns (PromoteToClusterExternalCloudAuditResponse);

  // GetClusterExternalCloudAudit gets cluster external cloud audit.
  rpc GetClusterExternalCloudAudit(GetClusterExternalCloudAuditRequest) returns (GetClusterExternalCloudAuditResponse);

  // DisableClusterExternalCloudAudit disables the external cloud audit feature.
  // This method causes the Teleport Auth service to reload.
  rpc DisableClusterExternalCloudAudit(DisableClusterExternalCloudAuditRequest) returns (google.protobuf.Empty);
}

// GetDraftExternalCloudAuditRequest is a request to get the draft external
// cloud audit configuration.
message GetDraftExternalCloudAuditRequest {}

// GetDraftExternalCloudAuditResponse is a response to getting the draft
// external cloud audit configuration.
message GetDraftExternalCloudAuditResponse {
  // ExternalCloudAudit is the ExternalCloudAudit to be upserted.
  ExternalCloudAudit external_cloud_audit = 1;
}

// UpsertDraftExternalCloudAuditRequest is a request to upsert the provided
// draft external cloud audit configuration.
message UpsertDraftExternalCloudAuditRequest {
  // ExternalCloudAudit is the ExternalCloudAudit to be upserted.
  ExternalCloudAudit external_cloud_audit = 1;
}

// UpsertDraftExternalCloudAuditResponse is a response to upserting the draft
// external cloud audit configuration.
message UpsertDraftExternalCloudAuditResponse {
  // ExternalCloudAudit is the ExternalCloudAudit that was upserted.
  ExternalCloudAudit external_cloud_audit = 1;
}

// DeleteDraftExternalCloudAuditRequest is a request to delete a draft external
// cloud audit configuration.
message DeleteDraftExternalCloudAuditRequest {}

// PromoteToClusterExternalCloudAuditRequest is a request to promote the current
// draft to cluster external cloud audit.
message PromoteToClusterExternalCloudAuditRequest {}

// PromoteToClusterExternalCloudAuditResponse is a response of promote the
// current draft to cluster external cloud audit.
message PromoteToClusterExternalCloudAuditResponse {
  // ClusterExternalCloudAudit is the ExternalCloudAudit will be used in cluster.
  ExternalCloudAudit cluster_external_cloud_audit = 1;
}

// GetClusterExternalCloudAuditRequest is a request to get an cluster external
// cloud audit configuration.
message GetClusterExternalCloudAuditRequest {}

// GetClusterExternalCloudAuditResponse is a response of getting an cluster
// external cloud audit configuration.
message GetClusterExternalCloudAuditResponse {
  // ClusterExternalCloudAudit contains name of external cloud audit.
  ExternalCloudAudit cluster_external_cloud_audit = 1;
}

// DisableClusterExternalCloudAuditRequest is a request for disabling cluster
// external cloud audit.
message DisableClusterExternalCloudAuditRequest {}
